# aegis-tui

./: Cargo.toml  README.md  aegis-tui
src/: drives.rs  main.rs  widget.rs
src/installer/: drivepages.rs  keyboard.rs  mod.rs  users.rs
