[package]
name = "aegis-tui"
version = "0.3.2"
edition = "2024"

[dependencies]
ansi-to-tui = "7.0.0"
anyhow = "1.0.98"
base64 = "0.22.1"
env_logger = "0.11.8"
flate2 = { version = "1.1.2", features = ["rust_backend"] }
fuzzy-matcher = "0.3.7"
log = "0.4.27"
once_cell = "1.19"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
strip-ansi-escapes = "0.2.1"
tempfile = "3.20.0"
throbber-widgets-tui = "0.8.0"
